courses/430_programming-languages/assignment-5/tests/regression/error/hw4_error27.sml
val prog =
  PROGRAM
    {decls=["a","b","c","a"],func_decls=[],stmts=[ST_PRINT {exp=EXP_ID "a"}]}
  : program
;
